@@ -70,6 +70,9 @@ We have received the following contributions:
    2014-11: Export CalloutManager headers for testing statically linked
             libraries.
 
+ - David Gutierrez Rueda, CERN
+   2014-12: Support for client link-address option in DHCPv6 (RFC6939)
+
 Kea uses log4cplus (http://sourceforge.net/projects/log4cplus/) for logging,
 Boost (http://www.boost.org/) library for almost everything, and can use Botan
 (http://botan.randombit.net/) or OpenSSL (https://www.openssl.org/) for
